--- a/index.html
+++ b/index.html
@@ -4,30 +4,63 @@
     <meta charset="utf-8">
     <title>Interactive Video Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-    <!--<link src="">-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.3/mediaelementplayer.min.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/mediaelement-and-player.min.js"></script>
+    <link href="css/mediaelementplayer.min.css" rel="stylesheet">
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
+        <div class="video-content">
+            <video class="video" style="width:100%;height:100%;" >
+                <source src="video/video.mp4" type="video/mp4">
+                <source src="video/video.ogg" type="video/ogg">
+            </video>
+        </div>
+        <div class="text-content">
+            <p>
+                <span class="part-1 text-current" data-time="04.130"> Now that we've looked at the architecture
+of the internet, let's see how you might</span>
+                <span class="part-2" data-time="7.535">connect your personal devices to
+the internet inside your house.</span>
+                <span class="part-3" data-time="11.270">Well there are many ways to
+connect to the internet, and</span>
+                <span class="part-4" data-time="13.960">most often people connect wirelessly.</span>
+                <span class="part-5" data-time="17.940">Let's look at an example of how
+you can connect to the internet.</span>
+            </p>
 
-        <video muted class="video mejs__player">
-            <source src="video/video.mp4" type="video/mp4">
-            <source src="video/video.ogg" type="video/ogg">
-        </video>
-    </div>
-    <div class="wrapper">
-        <p>Now that we've looked at the architecture of the internet, let's see how you might</p>
-    </div>
+            <p>
+                <span class="part-6" data-time="22.370">Let's look at an example of how
+you can connect to the internet.</span>
+                <span class="part-7" data-time="26.880">cable Internet, or a phone line if you
+have DSL, running to the outside of</span>
+            </p>
 
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-    </script>
-    <script src="js/mediaelement-and-player.min.js"></script>
-    <script src="js/main.js"></script>
+            <p>
+                <span class="part-8" data-time="30.920">your house, that connects you to
+the Internet Service Provider, or ISP.</span>
+                <span class="part-9" data-time="34.730">If you live far out in the country,
+you'll more likely have</span>
+                <span class="part-10" data-time="39.430">a dish outside your house, connecting
+you wirelessly to your closest ISP, or</span>
+                <span class="part-11" data-time="41.190">you might also use the telephone system.</span>
+                <span class="part-12" data-time="46.300">Whether a wire comes straight from
+the ISP hookup outside your house, or</span>
+                <span class="part-13" data-time="49.270">it travels over radio
+waves from your roof,</span>
+            </p>
+
+            <p>
+                <span class="part-13" data-time="53.760">the first stop a wire will make once
+inside your house, is at your modem.</span>
+                <span class="part-14" data-time="57.780">A modem is what connects the internet
+to your network at home.</span>
+                <span class="part-15" data-time="100.150">A few common residential modems are DSL or</span>
+            </p>
+
+        </div>
+    </div>
 </body>
 </html>
