--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <div class="video-content">
-            <video class="video" style="width:100%;height:100%;" >
+            <video class="video" muted style="width:100%;height:100%;" >
                 <source src="video/video.mp4" type="video/mp4">
                 <source src="video/video.ogg" type="video/ogg">
             </video>
