add loop to video, fix js events

--- a/index.html
+++ b/index.html
@@ -13,53 +13,54 @@
 <body>
     <div class="wrapper">
         <div class="video-content">
-            <video class="video" muted style="width:100%;height:100%;" >
+            <video loop class="video" style="width:100%;height:100%;" >
                 <source src="video/video.mp4" type="video/mp4">
                 <source src="video/video.ogg" type="video/ogg">
             </video>
         </div>
         <div class="text-content">
             <p>
-                <span class="part-1 text-current" data-time="04.130"> Now that we've looked at the architecture
-of the internet, let's see how you might</span>
-                <span class="part-2" data-time="7.535">connect your personal devices to
-the internet inside your house.</span>
-                <span class="part-3" data-time="11.270">Well there are many ways to
+                <span data-time-start="0.240" data-time-end="04.130">
+                    Now that we've looked at the architecture of the internet, let's see how you might
+                </span>
+                <span data-time-start="4.131" data-time-end="7.535">
+                    connect your personal devices to the internet inside your house.
+                </span>
+                <span  data-time-start="7.536" data-time-end="11.270">Well there are many ways to
 connect to the internet, and</span>
-                <span class="part-4" data-time="13.960">most often people connect wirelessly.</span>
-                <span class="part-5" data-time="17.940">Let's look at an example of how
+                <span data-time-start="11.271" data-time-end="13.960">most often people connect wirelessly.</span>
+                <span data-time-start="13.961" data-time-end="17.940">Let's look at an example of how
 you can connect to the internet.</span>
             </p>
 
             <p>
-                <span class="part-6" data-time="22.370">Let's look at an example of how
-you can connect to the internet.</span>
-                <span class="part-7" data-time="26.880">cable Internet, or a phone line if you
+                <span data-time-start="17.941" data-time-end="22.370">If you live in a city or a town,
+you probably have a coaxial cable for</span>
+                <span data-time-start="22.371" data-time-end="26.880">cable Internet, or a phone line if you
 have DSL, running to the outside of</span>
             </p>
 
             <p>
-                <span class="part-8" data-time="30.920">your house, that connects you to
+                <span data-time-start="26.881" data-time-end="30.920">your house, that connects you to
 the Internet Service Provider, or ISP.</span>
-                <span class="part-9" data-time="34.730">If you live far out in the country,
+                <span data-time-start="30.921" data-time-end="34.730">If you live far out in the country,
 you'll more likely have</span>
-                <span class="part-10" data-time="39.430">a dish outside your house, connecting
+                <span  data-time-start="34.731" data-time-end="39.430">a dish outside your house, connecting
 you wirelessly to your closest ISP, or</span>
-                <span class="part-11" data-time="41.190">you might also use the telephone system.</span>
-                <span class="part-12" data-time="46.300">Whether a wire comes straight from
+                <span  data-time-start="39.431" data-time-end="41.190">you might also use the telephone system.</span>
+                <span  data-time-start="41.191" data-time-end="46.300">Whether a wire comes straight from
 the ISP hookup outside your house, or</span>
-                <span class="part-13" data-time="49.270">it travels over radio
+                <span  data-time-start="46.301" data-time-end="49.270">it travels over radio
 waves from your roof,</span>
             </p>
 
             <p>
-                <span class="part-13" data-time="53.760">the first stop a wire will make once
+                <span  data-time-start="49.271"  data-time-end="53.760">the first stop a wire will make once
 inside your house, is at your modem.</span>
-                <span class="part-14" data-time="57.780">A modem is what connects the internet
+                <span  data-time-start="53.761" data-time-end="57.780">A modem is what connects the internet
 to your network at home.</span>
-                <span class="part-15" data-time="100.150">A few common residential modems are DSL or</span>
+                <span  data-time-start="57.781" data-time-end="100.150">A few common residential modems are DSL or</span>
             </p>
-
         </div>
     </div>
 </body>
